# 2024-ikt218-osdev

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/files/: entrypoint.sh
.devcontainer/files/src/: build-binutils.sh  build-gcc.sh
.devcontainer/files/supervisor/: supervisord.conf  websockify.conf
.github/web/: README.md  setup.py  venv.sh
.github/web/web/: compile.py  main.py
.github/web/web/static/: v86.wasm
.github/web/web/templates/: index.html
.github/workflows/: docker-image.yml  parse_submissions.yaml  pr-check-changed-root.yml
src/12_cashmoney/: CMakeLists.txt
src/12_cashmoney/include/libc/: limits.h  stdint.h  stdio.h  string.h
src/12_cashmoney/src/: common.c  common.h  descriptor_tables.c  descriptor_tables.h  kernel.c  kernel.cpp  monitor.c  monitor.h  multiboot2.asm  stdio.c  string.c
src/12_cashmoney/src/descriptor_tables/: descriptor_tables.c  descriptor_tables.h  idt_flush.asm
src/12_cashmoney/src/gdt/: descriptor_tables.h
src/13_OSExperts/: CMakeLists.txt
src/13_OSExperts/include/: function.h  gdt.h
src/13_OSExperts/src/: function.c  gdt.asm  gdt.c  kernel.c  kernel.cpp  multiboot2.asm
src/16_OSGubbene/: CMakeLists.txt
src/16_OSGubbene/gdt/: gdt.asm  gdt.cpp  gdt.h
src/16_OSGubbene/include/libc/: stdio.h  string.h
src/16_OSGubbene/src/: kernel.cpp  multiboot2.asm
src/16_OSGubbene/src/libc/: stdio.cpp  string.c
src/1_HOY/: CMakeLists.txt  limine.cfg
src/1_HOY/include/libc/: gdt.h
src/1_HOY/src/: gdt.asm  gdt.c  kernel.c
src/1_per-arne/include/libc/: stdbool.h  stdint.h
src/20_PopKernel/: CMakeLists.txt
src/20_PopKernel/include/: desTables.h  gdt.h  io.h  isr.h  kernelUtils.h  keyboard.h  macros.h  memory.h  pit.h
src/20_PopKernel/include/applications/: demos.h  song.h
src/20_PopKernel/include/libc/: math.c  stdint.h  stdio.c  stdio.h  stdlib.c  stdlib.h  string.c  string.h
src/20_PopKernel/include/songPlayer/: frequencies.h
src/20_PopKernel/src/: desTables.asm  desTables.c  gdt.asm  gdt.c  interrupt.asm  io.c  isr.c  kernel.c  kernel.cpp  kernelUtils.c  keyboard.c  multiboot2.asm  pit.c  songPlayer.cpp
src/20_PopKernel/src/applications/: demos.cpp  songPlayer.cpp
src/20_PopKernel/src/memory/: malloc.c  memory.c  memutils.c
src/32_glade-gutter/: CMakeLists.txt
src/32_glade-gutter/include/: gdt.h  terminal_write.h
src/32_glade-gutter/src/: gdt.asm  gdt.c  kernel.c  multiboot2.asm  terminal_write.c
src/5_OsExp/: CMakeLists.txt  README.md
src/5_OsExp/include/libc/: stdarg.h
src/5_OsExp/src/: gdt.c  gdt.h  idt.c  idt.h  kernel.c  multiboot2.asm  screen.c  screen.h
src/5_OsExp/src/console/: screen.c
src/5_OsExp/src/gdt/: README.md  gdt.asm  gdt.c  gdt.h
src/5_OsExp/src/idt/: idt.c  idt.h
src/5_OsExp/src/printf/: printf.asm
src/5_OsExp/src/screen/: screen.c  screen.h  splash.c  splash.h
src/5_OsExp/src/sector0/: README.md  sector0.asm
src/5_OsExp/src/stdlib/: stdmem.c  stdport.c  stdport.h  stdtxt.c  stdtxt.h
src/5_OsExp/stdlib/: stdint.h  stdmem.c  stdmem.h  stdport.c  stdport.h  stdtxt.c  stdtxt.h
src/5_os_exp/include/libc/: string.h
src/9_vandrere/src/: multiboot2.asm
src/9_vandrere/src/arch/i386/: linker.ld
src/group_07/include/libc/: stdio.h
src/group_07/scripts/: start_qemu.sh
src/group_name/: CMakeLists.txt
src/group_name/include/libc/: stddef.h
src/group_name/scripts/: start_qemu.sh
src/group_name/src/: kernel.c
src/os-exp-5/include/libc/: limits.h
src/os-exp-5/src/: kernel.cpp
src/solo_valiantos/: some_useful_stuff.txt
src/solo_valiantos/src/: kernel.c
